samples/_failures_safe/1761146631_ce80f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45729421.c: In function ‘main’:
./samples/SAFE/__tmp_45729421.c:174:18: error: expected ‘]’ at end of input
  174 |         input[len
      |                  ^
      |                  ]
./samples/SAFE/__tmp_45729421.c:174:9: error: expected declaration or statement at end of input
  174 |         input[len
      |         ^~~~~
./samples/SAFE/__tmp_45729421.c:174:9: error: expected declaration or statement at end of input
